docs/v1/api/java-api.mdx
---
title: Java API
sidebar_position: 2
---

import { CodeBlockToggle, DbTable, MethodRef } from "@site/src/components/convengine";

# Java API (Core Contracts)

## Entry points

<DbTable
  title="Primary interfaces"
  columns={["Type", "Package", "Role"]}
  rows={[
    ["ConversationalEngine", "engine.core", "Main process method"],
    ["LlmClient", "llm.core", "LLM adapter contract"],
    ["EngineStep", "engine.pipeline", "Step unit contract"],
    ["EngineStepHook", "engine.hook", "Step interception contract"],
  ]}
/>

<CodeBlockToggle title="ConversationalEngine" language="java" packagePath="com.github.salilvnair.convengine.engine.core">
{`public interface ConversationalEngine {
    EngineResult process(EngineContext engineContext);
}`}
</CodeBlockToggle>

<CodeBlockToggle title="LlmClient" language="java" packagePath="com.github.salilvnair.convengine.llm.core">
{`public interface LlmClient {
    String generateText(EngineSession session, String hint, String contextJson);
    String generateJson(EngineSession session, String hint, String jsonSchema, String contextJson);
    float[] generateEmbedding(EngineSession session, String input);
    default String generateJsonStrict(EngineSession session, String hint, String jsonSchema, String context) {
        return generateJson(session, hint, jsonSchema, context);
    }
}`}
</CodeBlockToggle>

<CodeBlockToggle title="EngineStepHook" language="java" packagePath="com.github.salilvnair.convengine.engine.hook">
{`public interface EngineStepHook {
    default boolean supports(EngineStep.Name stepName, EngineSession session) { return true; }
    default void beforeStep(EngineStep.Name stepName, EngineSession session) {}
    default void afterStep(EngineStep.Name stepName, EngineSession session, StepResult result) {}
    default void onStepError(EngineStep.Name stepName, EngineSession session, Throwable error) {}
}`}
</CodeBlockToggle>

<CodeBlockToggle title="EngineStep.Name enum (hook-safe matching)" language="java" packagePath="com.github.salilvnair.convengine.engine.pipeline">
{`public interface EngineStep {
    enum Name {
        AuditUserInputStep,
        IntentResolutionStep,
        AddContainerDataStep,
        SchemaExtractionStep,
        ResponseResolutionStep,
        AutoAdvanceStep,
        McpToolStep,
        LoadOrCreateConversationStep,
        FallbackIntentStateStep,
        PersistConversationBootstrapStep,
        ResetConversationStep,
        PersistConversationStep,
        PipelineEndGuardStep,
        ResetResolvedIntentStep,
        PolicyEnforcementStep,
        RulesStep,
        Unknown;

        public static Name fromStepName(String stepName) { /* ... */ }
        public boolean matches(String stepName) { /* ... */ }
    }
}`}
</CodeBlockToggle>

## Extension contracts

- <MethodRef>ResponseTransformerHandler</MethodRef>
- <MethodRef>ContainerDataTransformerHandler</MethodRef>
- container interceptors
- rule task execution pathway via <MethodRef>SET_TASK</MethodRef>
